Change icon color for back button. Also fix issues with footer and full text spacing within the banner.

--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -31,7 +31,12 @@
 }
 
 .btn-back {
-  top: 3em;
-  right: 3em;
+  position: fixed;
+  top: 2.75em;
+  right: 2.75em;
   z-index: 2000;
+}
+
+.btn:hover .icon-btn img, .btn:hover .icon-btn svg {
+  fill: #fff;
 }
